2012-08-05  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-suppress-changed-records-recording): Remove.
	(bbdb-puthash, bbdb-gethash, bbdb-remhash): Ignore keys that are
	empty strings or nil.
	(bbdb-hash-record): Explicitly hash name.
	(bbdb-change-record, bbdb-delete-record-internal)
	(bbdb-insert-record-internal, bbdb-overwrite-record-internal):
	Operate on hash table and bbdb-changed-records list only when
	necessary.

	* lisp/bbdb-com.el (bbdb-delete-records): Remove record from hash
	table.
	(bbdb-merge-records): Do not add new-record to the list of changed
	records, which is done already by bbdb-change-record.

2012-08-05  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Do not call quit-window.
	Instead, rely on set-window-configuration that it does what we
	want.

2012-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-merge-records): Improve interactive call
	and docstring.

2012-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-allow-duplicates, bbdb-hash-update)
	(bbdb-record-set-field): Fix docstring.
	* lisp/bbdb-com.el (bbdb-merge-records): Do not through an error
	when merging the old and new record results in duplicate AKAs and
	email addresses.

2012-07-31  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): When a single record
	matches, analyze more carefully which mail address to use.  Cycle
	even if the record contains only one mail address, yet
	bbdb-dwim-mail gives us something different from what we have.
	Search correctly for RFC 822 addresses containing a full name.

2012-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-annotate-message): Simplify. Create new
	record if update-p has not value update.

2012-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-gethash): Allow value of t for arg predicate.

2012-07-20  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-com.el (bbdb-message-search): Allow args name or mail
	to be nil.
